--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>イエロー・マジック・コレクション</h1>
-    <h3 color="red">工事中。。。</h3>
+    <font color="red"><h3>工事中。。。</h3></font>
     <p>last commit:2023/05/09</p>
   </body>
 </html>
