--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <title>イエロー・マジック・コレクション</title>
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>イエロー・マジック・コレクション</h1>
     <font color="red"><h3>工事中。。。</h3></font>
-    <p>last commit:2023/05/09</p>
+    <p>last commit:2023/05/10</p>
   </body>
 </html>
