--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>イエロー・マジック・コレクション</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="apple-touch-icon" href="favicon.png" sizes="512x512">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
