--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>イエロー・マジック・コレクション</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="apple-touch-icon" href="favicon.png" sizes="512x512">
+    <link rel="icon" type="image/png" href="asset/favicon/favicon-32x32.png" />
+    <link rel="apple-touch-icon" href="asset/favicon/apple-touch-icon-152x152.png">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
