--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>イエロー・マジック・コレクション</title>
     <link rel="icon" type="image/png" href="asset/favicon/favicon-32x32.png" />
-    <link rel="apple-touch-icon" href="asset/favicon/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="asset/favicon/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="asset/favicon/apple-touch-icon-180x180.png">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
