--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <title>イエロー・マジック・コレクション</title>
-    <link rel="icon" type="image/png" href="/asset/favicon/favicon-32x32.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="/asset/favicon/apple-touch-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/asset/favicon/apple-touch-icon-180x180.png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="./asset/favicon/favicon-32x32.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="./asset/favicon/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./asset/favicon/apple-touch-icon-180x180.png">
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <h1>イエロー・マジック・コレクション</h1>
     <font color="red"><h3>工事中。。。</h3></font>
-    <p>last commit:2023/05/10</p>
+    <p>last commit:2023/05/11</p>
   </body>
 </html>
