--- a/onair/index.html
+++ b/onair/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>イエロー・マジック・コレクション</title>
+    <base href="../">
     <link rel="icon" type="image/x-icon" href="/asset/favicon/favicon.ico" sizes="any" />
     <link rel="icon" type="image/png" href="/asset/favicon/favicon-48x48.png" sizes="48x48" />
     <link rel="icon" type="image/png" href="/asset/favicon/favicon-72x72.png" sizes="72x72" />
@@ -25,5 +26,5 @@
     <h1>Y.M.O. ON AIR LIST</h1>
     <font color="red"><h3>工事中</h3></font>
     <h2>参考サイト</h2>
-    <p>http://kutabirete.web.fc2.com/ymo_onair.html</p>
+    <a href="http://kutabirete.web.fc2.com/ymo_onair.html">YMO オンエアリスト</a>
   </body>
