--- a/onair/index.html
+++ b/onair/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>イエロー・マジック・コレクション</title>
+    <base href="https://yellowmagiccollection.github.io/website/">
     <link rel="icon" type="image/x-icon" href="/asset/favicon/favicon.ico" sizes="any" />
     <link rel="icon" type="image/png" href="/asset/favicon/favicon-48x48.png" sizes="48x48" />
     <link rel="icon" type="image/png" href="/asset/favicon/favicon-72x72.png" sizes="72x72" />
