--- a/onair/index.html
+++ b/onair/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>イエロー・マジック・コレクション</title>
-    <base href="https://yellowmagiccollection.github.io/website/">
+    <base href="https://yellowmagiccollection.github.io/website/" />
     <link rel="icon" type="image/x-icon" href="asset/favicon/favicon.ico" sizes="any" />
     <link rel="icon" type="image/png" href="asset/favicon/favicon-48x48.png" sizes="48x48" />
     <link rel="icon" type="image/png" href="asset/favicon/favicon-72x72.png" sizes="72x72" />
@@ -20,13 +20,20 @@
     <link rel="apple-touch-icon" sizes="144x144" href=asset/favicon/apple-touch-icon-144x144.png" />
     <link rel="apple-touch-icon" sizes="152x152" href="asset/favicon/apple-touch-icon-152x152.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="asset/favicon/apple-touch-icon-180x180.png" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Y.M.O. ON AIR LIST</h1>
     <font color="red"><h3>工事中</h3></font>
     <h2>1978</h2>
-    <h3.1978/10/18 芝郵便貯金ホール</h3>
+    <h3>1978/10/18 芝郵便貯金ホール</h3>
+    <p>FM東京「サウンドカーニヴァル」(1978.10.26 & 11.02放送)</p>
+    <h3>1978/12/10  紀伊国屋ホール</h3>
+    <p>FM東京(1979.01.01放送)</p>
+    <h3>1979/08/04 -LA- THE GREEK THEATRE</h3>
+    <p>NHK-FM(1979.09.23放送)</p>
+    <font color="yellow><p>東京12チャンネル 「パイオニア ステレオ音楽館」(1979.11.05~09 & 1980.06.16~20)</p></font>
     <h2>参考サイト</h2>
     <a href="http://kutabirete.web.fc2.com/ymo_onair.html">YMO オンエアリスト</a>
   </body>
+</html>
