--- a/onair/index.html
+++ b/onair/index.html
@@ -32,7 +32,10 @@
     <p>FM東京(1979.01.01放送)</p>
     <h3>1979/08/04 -LA- THE GREEK THEATRE</h3>
     <p>NHK-FM(1979.09.23放送)</p>
-    <font color="yellow><p>東京12チャンネル 「パイオニア ステレオ音楽館」(1979.11.05~09 & 1980.06.16~20)</p></font>
+    <font color="yellow"><p>東京12チャンネル 「パイオニア ステレオ音楽館」(1979.11.05~09 & 1980.06.16~20)</p>
+    <p>テレビ埼玉「サウンド・スーパー・シティー」(1982年放送)</p></font>
+    <h3>1979/09/10 中野サンプラザ</h3>
+    <font color="yellow"><p>東京12チャンネル 「パイオニア ステレオ音楽館」(1979.11.08)</p></font>
     <h2>参考サイト</h2>
     <a href="http://kutabirete.web.fc2.com/ymo_onair.html">YMO オンエアリスト</a>
   </body>
