--- a/onair/index.html
+++ b/onair/index.html
@@ -30,7 +30,7 @@
     <p>FM東京「サウンドカーニヴァル」(1978.10.26 & 11.02放送)</p>
     <h3>1978/12/10  紀伊国屋ホール</h3>
     <p>FM東京(1979.01.01放送)</p>
-    <h3>1979/08/04 -LA- THE GREEK THEATRE</h3>
+    <h3>1979/08/04 -L.A.- THE GREEK THEATRE</h3>
     <p>NHK-FM(1979.09.23放送)</p>
     <font color="yellow"><p>東京12チャンネル 「パイオニア ステレオ音楽館」(1979.11.05~09 & 1980.06.16~20)</p>
     <p>テレビ埼玉「サウンド・スーパー・シティー」(1982年放送)</p></font>
