--- a/onair/index.html
+++ b/onair/index.html
@@ -39,5 +39,7 @@
     <font color="yellow"><p>東京12チャンネル 「パイオニア ステレオ音楽館」(1979.11.08)</p></font>
     <h2>参考サイト</h2>
     <a href="http://kutabirete.web.fc2.com/ymo_onair.html">YMO オンエアリスト</a>
+    <a href="http://mmw4.web.fc2.com/dbymo/history1979.html">YMO Complete History</a>
+    <p>last update:2023/05/13</p>
   </body>
 </html>
