--- a/onair/index.html
+++ b/onair/index.html
@@ -17,7 +17,7 @@
     <link rel="icon" type="image/png" href="asset/favicon/favicon-256x256.png" sizes="256x256" />
     <link rel="icon" type="image/png" href="asset/favicon/favicon-384x384.png" sizes="384x384" />
     <link rel="icon" type="image/png" href="asset/favicon/favicon-512x512.png" sizes="512x512" />
-    <link rel="apple-touch-icon" sizes="144x144" href=asset/favicon/apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="asset/favicon/apple-touch-icon-144x144.png" />
     <link rel="apple-touch-icon" sizes="152x152" href="asset/favicon/apple-touch-icon-152x152.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="asset/favicon/apple-touch-icon-180x180.png" />
     <link rel="stylesheet" href="onair/style.css" />
