--- a/onair/index.html
+++ b/onair/index.html
@@ -27,7 +27,7 @@
     <font color="red"><h3>工事中</h3></font>
     <font color="yellow"><h2>1978</h2></font>
     <h3>1978/10/18 芝郵便貯金ホール</h3>
-    <p>FM東京「サウンドカーニヴァル」(1978.10.26 & 11.02放送)</p>
+    <p>FM東京「サウンドカーニヴァル」</p><a href="shiba781018">(1978.10.26 & 11.02放送)</a>
     <h3>1978/12/10  紀伊国屋ホール</h3>
     <p>FM東京(1979.01.01放送)</p>
     <font color="yellow"><h2>1979</h2></font>
@@ -40,6 +40,6 @@
     <h2>参考サイト</h2>
     <a href="http://kutabirete.web.fc2.com/ymo_onair.html">YMO オンエアリスト</a>
     <a href="http://mmw4.web.fc2.com/dbymo/history1979.html">YMO Complete History</a>
-    <p>last update:2023/05/13</p>
+    <p>last update:2023/05/14</p>
   </body>
 </html>
