--- a/onair/index.html
+++ b/onair/index.html
@@ -21,6 +21,7 @@
     <link rel="apple-touch-icon" sizes="152x152" href="asset/favicon/apple-touch-icon-152x152.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="asset/favicon/apple-touch-icon-180x180.png" />
     <link rel="stylesheet" href="onair/style.css" />
+    <base href="https://yellowmagiccollection.github.io/website/onair/" />
   </head>
   <body>
     <h1>Y.M.O. ON AIR LIST</h1>
