--- a/onair/shiba781018.html
+++ b/onair/shiba781018.html
@@ -20,7 +20,7 @@
     <link rel="apple-touch-icon" sizes="144x144" href="asset/favicon/apple-touch-icon-144x144.png" />
     <link rel="apple-touch-icon" sizes="152x152" href="asset/favicon/apple-touch-icon-152x152.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="asset/favicon/apple-touch-icon-180x180.png" />
-    <link rel="stylesheet" href="onair/style.css" />
+    <link rel="stylesheet" href="onair/style2.css" />
   </head>
   <body>
     <h1>FM東京「サウンドカーニバル・シンセサイザーランド」</h1>
