--- a/onair/shiba781018.html
+++ b/onair/shiba781018.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
-    <title>イエロー・マジック・コレクション</title>
+    <title>10/27&11/03 FM東京「サウンドカーニバル・シンセサイザーランド」</title>
     <base href="https://yellowmagiccollection.github.io/website/">
     <link rel="icon" type="image/x-icon" href="asset/favicon/favicon.ico" sizes="any" />
     <link rel="icon" type="image/png" href="asset/favicon/favicon-48x48.png" sizes="48x48" />
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="onair/style2.css" />
   </head>
   <body>
-    <h1>FM東京「サウンドカーニバル・シンセサイザーランド」</h1>
+    <font color="yellow"><h1>FM東京「サウンドカーニバル・シンセサイザーランド」</h1></font>
     <h3>1978/10/27 01:00~<br>1978/11/03 01:00~</h3>
     <ol>
       <li>BEHIND THE MASK</li>
@@ -32,7 +32,7 @@
       <li>高雅で感傷的なワルツ「十分に活発に」(ラヴェル)</li>
       <li>MAD PIERROT</li>
       <li>SIMOON</li>
-      <li>WANTED</li>
+      <li>WANTED(ピンク・レディー)</li>
       <li>FIRECRACKER</li>
     </ol>
     <p>※1～5：10月27日放送<br>※6～8：11月3日放送</p>
