--- a/onair/index.html
+++ b/onair/index.html
@@ -28,9 +28,9 @@
     <font color="red"><h3>工事中</h3></font>
     <font color="yellow"><h2>1978</h2></font>
     <h3>1978/10/18 芝郵便貯金ホール</h3>
-    <p>FM東京「サウンドカーニヴァル」<a href="shiba781018">(1978.10.26 & 11.02放送)</a></p>
+    <p>FM東京「サウンドカーニヴァル」<a href="onair/shiba781018">(1978.10.26 & 11.02放送)</a></p>
     <h3>1978/12/10  紀伊国屋ホール</h3>
-    <p>FM東京(1979.01.01放送)</p>
+    <p>FM東京 <a href="onair/kinokuniya781210">(1979.01.01放送)</a></p>
     <font color="yellow"><h2>1979</h2></font>
     <h3>1979/08/04 -L.A.- THE GREEK THEATRE</h3>
     <p>NHK-FM(1979.09.23放送)</p>
