--- a/onair/index.html
+++ b/onair/index.html
@@ -33,7 +33,7 @@
     <p>FM東京 <a href="onair/kinokuniya781210">(1979.01.02放送)</a></p>
     <font color="yellow"><h2>1979</h2></font>
     <h3>1979/08/04 -L.A.- THE GREEK THEATRE</h3>
-    <p>NHK-FM(1979.09.23放送)</p>
+    <p>FM東京 ビクターオーディオサロン「ザ・ミュージック」<a href="onair/greek790804fm0923">(1979.09.23放送)</a></p>
     <font color="yellow"><p>東京12チャンネル 「パイオニア ステレオ音楽館」(1979.11.05~09 & 1980.06.16~20)</p>
     <p>テレビ埼玉「サウンド・スーパー・シティー」(1982年放送)</p></font>
     <h3>1979/09/10 中野サンプラザ</h3>
