--- a/onair/index.html
+++ b/onair/index.html
@@ -34,7 +34,7 @@
     <font color="yellow"><h2>1979</h2></font>
     <h3>1979/08/04 -L.A.- THE GREEK THEATRE</h3>
     <p>FM東京 ビクターオーディオサロン「ザ・ミュージック」<a href="onair/greek790804fm0923">(1979.09.23放送)</a></p>
-    <font color="yellow"><p>東京12チャンネル 「パイオニア ステレオ音楽館」(1979.11.05~09 & 1980.06.16~20)</p>
+    <font color="yellow"><p>東京12チャンネル 「パイオニア ステレオ音楽館」(1979.11.05~09放送) & (1980.06.16~20放送)</p>
     <p>テレビ埼玉「サウンド・スーパー・シティー」(1982年放送)</p></font>
     <h3>1979/09/10 中野サンプラザ</h3>
     <font color="yellow"><p>東京12チャンネル 「パイオニア ステレオ音楽館」(1979.11.08)</p></font>
