--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
   <body>
     <h1>イエロー・マジック・コレクション</h1>
     <font color="red"><h3>工事中。。。</h3></font>
-    <p>last commit:2023/05/11</p>
+    <a href=onair>Y.M.O. オンエアリスト</a>
+    <a href=live>Y.M.O. ライブリスト</a>
+    <p>last commit:2023/09/09</p>
   </body>
 </html>
