--- a/live/index.html
+++ b/live/index.html
@@ -30,7 +30,7 @@
     <h3>1978/10/18 芝郵便貯金ホール</h3>
     <p>FM東京「サウンドカーニヴァル」<a href="live/shiba781018">(1978.10.27 & 11.03放送)</a></p>
     <h3>1978/12/10  紀伊国屋ホール</h3>
-    <p>FM東京 <a href="live/kinokuniya781210">(1978.12.10)</a></p>
+    <p><a href="live/kinokuniya781210">セットリストほか</a></p>
     <font color="yellow"><h2>1979</h2></font>
     <h3>1979/08/04 -L.A.- THE GREEK THEATRE</h3>
     <p>FM東京 ビクターオーディオサロン「ザ・ミュージック」<a href="onair/greek790804fm0923">(1979.09.23放送)</a></p>
