--- a/live/index.html
+++ b/live/index.html
@@ -28,7 +28,7 @@
     <font color="red"><h3>工事中</h3></font>
     <font color="yellow"><h2>1978</h2></font>
     <h3>1978/10/18 芝郵便貯金ホール</h3>
-    <p>FM東京「サウンドカーニヴァル」<a href="live/shiba781018">(1978.10.27 & 11.03放送)</a></p>
+    <p><a href="live/shiba781018">セットリストほか</a></p>
     <h3>1978/12/10  紀伊国屋ホール</h3>
     <p><a href="live/kinokuniya781210">セットリストほか</a></p>
     <font color="yellow"><h2>1979</h2></font>
