--- a/live/index.html
+++ b/live/index.html
@@ -33,11 +33,9 @@
     <p><a href="live/kinokuniya781210">セットリストほか</a></p>
     <font color="yellow"><h2>1979</h2></font>
     <h3>1979/08/04 -L.A.- THE GREEK THEATRE</h3>
-    <p>FM東京 ビクターオーディオサロン「ザ・ミュージック」<a href="onair/greek790804fm0923">(1979.09.23放送)</a></p>
-    <font color="yellow"><p>東京12チャンネル 「パイオニア ステレオ音楽館」<a href="onair/greek790804so7911">(1979.11.05~09放送)</a> & (1980.06.16~20放送)</p>
-    <p>テレビ埼玉「サウンド・スーパー・シティー」(1982年放送)</p></font>
-    <h3>1979/09/10 中野サンプラザ</h3>
-    <font color="yellow"><p>東京12チャンネル 「パイオニア ステレオ音楽館」(1979.11.08)</p></font>
+    <p><a href="live/greek790804">セットリストほか</a></p>
+    <h3>1979/09/10 ~ 09/11 中野サンプラザ</h3>
+    <p><a href="live/nakano790910">セットリストほか</a></p>
     <h2>参考サイト</h2>
     <a href="http://kutabirete.web.fc2.com/ymo_onair.html">YMO オンエアリスト</a>
     <a href="http://mmw4.web.fc2.com/dbymo/history1979.html">YMO Complete History</a>
