Update and rename nakano790910 to nakano790910.html

--- a/live/nakano790910.html
+++ b/live/nakano790910.html
@@ -24,15 +24,15 @@
   </head>
   <body>
     <font color="yellow"><h1>SPECIAL GUEST of THE TUBES</h1></font>
-    <h3>1979/08/04</h3>
+    <h3>1979/09/10</h3>
     <ol>
+      <li>ROCKET FACTORY</li>
       <li>BEHIND THE MASK</li>
       <li>LA FEMME CHINOISE</li>
       <li>COSMIC SURFIN'</li>
       <li>RYDEEN</li>
       <li>DAY TRIPPER</li>
       <li>THOUSAND KNIVES</li>
-      <h5>encore</h5>
       <li>TONG POO</li>
     </ol>
   </body>
